translate tabuleiro to board

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@ body{
 	border-top: 4px double #000;
 	text-align: center;
 }
-#tabuleiro{
+#board{
 	width:70%;
 	height:450px;
 	text-align:center;
@@ -192,7 +192,7 @@ body{
 <head>
 <body>
 	<div>
-		<div id="tabuleiro">
+		<div id="board">
 			<!-- Cards on the Board -->
 		</div>
 			<div class="chatroom">
