--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@ body{
 	padding:5px;
 	margin:0.2% auto;
 	margin-right: 10px !important;
+	background-color: white;
 }
 .card.R90{
 	-ms-transform: rotate(90deg); /* IE 9 */
